# data-acquisition-system

./: .all-contributorsrc  .gitignore  .gitmodules  .travis.yml  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
AntPlusSensor/: .eslintrc
Bridge/: .gitignore  CMakeLists.txt  README.md
Bridge/src/: bridge.cpp  bridge.hpp  debug.cpp  debug.hpp  frame.cpp  frame.hpp  main.cpp  mqtt.cpp  mqtt.hpp  nrf24.cpp  nrf24.hpp  protocol.cpp  protocol.hpp  radio.cpp  radio.hpp  ring_buffer.hpp  thread_queue.hpp  zeta.cpp  zeta.hpp
Bridge/src/rf_config/: si4455_revb1_bidir_fixed_crc_pre10_sync3MHP_pay8_433mhz_40kbps.cpp  si4455_revb1_bidir_fixed_crc_pre10_sync3MHP_pay8_433mhz_40kbps.hpp  si4455_revb1_bidir_fixed_crc_pre10_sync3MHP_pay8_433mhz_40kbps.xml
DAS/: .env.example  .gitignore  Dockerfile  README.md  __init__.py  mqtt_wireless_logger.py  pyproject.toml  requirements.txt
DAS/das/: V2_mqtt_playback.py  V3_fake_module.py  V3_mqtt_playback.py  V3_mqtt_recorder.py  export_log_V2.py  fake_module.py  log_2_excel.py  log_converter.py  log_to_csv_V2.py  logger.py  mqtt_logger_V2.py  mqtt_playback_V2.py  mqtt_recorder.py  mqtt_recorder_V2.py  mqtt_wireless_logger.py  pyproject.toml
DAS/das/service/: README.md  install.sh  logger.service
DAS/das/tests/: __init__.py  fake_module_tester.py  mqtt_logger_test.py  mqtt_test.py  test_logger.py
DAS/das/utils/: DataToTempCSV.py  MockSensor.py  TopicsEnum.py  __init__.py  das_data_generator.py  logger.py  mock_sensor.py  mqtt_test.py
DAS/data_pipeline/: pyproject.toml
DAS/tests/: __init__.py  fake_module_tester.py  mock_wireless_module.py  mqtt_test.py
DAS/utils/: DataToTempCSV.py  __init__.py
M3-wireless-module/: M3-wireless-module.ino  data_test.py  header.cpp  header.h  mqtt_start_stop.py
M3-wireless-module/M3-wireless-module/: M3-wireless-module.ino
Packaging/: 10mm_Stand_Off.SLDPRT  15mm_Stand_Off.SLDPRT  18650_Cell.SLDPRT  40_pin_female_header.SLDPRT  DAS.SLDASM  DAS_Base.SLDPRT  DAS_Bottom_Shelf.SLDPRT  DAS_Lid.SLDPRT  DAS_Walls.SLDPRT  Raspi_Zero.SLDPRT  Stripboard.SLDPRT  Vruzend_Connector.SLDPRT
Packaging/raspberry-pi-zero-1.snapshot.11/: raspberry_pi_zero.SLDASM
Raspi/: DAS.js  DAS.py  Dockerfile  README.md  desummariser.py  firmata_test.py  mqtt_wireless_logger.py  package-lock.json  package.json  summariser.py
Raspi/ReedSwitch/: rs.py  rs_simple.py  run.py  transfer.sh
Raspi/Reed_Switch/: reed_switch.py
Raspi/Test/: DataToTempCSV.py  MockSensor.py  Pipfile  das_data_generator.py  enum_modules.py  enum_topics.py  mock_wireless_module.py  mqtt_test.py  mqtt_wireless_log.py  serial_test.py  test_data_generator.py  topics.py
Raspi/config/: winston.js
Raspi/tests/: MockSensor.py  mock_wireless_module.py
Raspi/utils/: DataToTempCSV.py  average.js
Relay/: bridge.py  protocol.py
Teensy/: DAS.ino  test.txt
Teensy/DAS/: DAS.ino  SensorStructures.h
Teensy/DAS_MOCK/: DAS_MOCK.ino  SparkFunLSM6DS3.cpp
Teensy/DAS_NO_GPS/: DAS_NO_GPS.ino  SensorStructures.h  SparkFunLSM6DS3.cpp  SparkFunLSM6DS3.h
WirelessModules/: .gitignore  .pylintrc  Pipfile  README.md  micropy.json  upload.sh
WirelessModules/src/: config.example.py  main.py  wireless_module.py
ant_plus_sensor/: .eslintrc  README.md  ant_plus_logger.js  ant_plus_logger.py  package-lock.json  package.json  requirements.txt
ant_plus_sensor/config/: winston.js
ant_plus_sensor/python_ant_plus_sensor/: README.md  ant_plus_logger.py  ant_plus_logger_old.py  pyproject.toml
ant_plus_sensor/python_ant_plus_sensor/utils/: average.py
ant_plus_sensor/utils/: average.js
crash_alert/: .env.example  README.md  crash_alert.py  main_crash_alert.py  pyproject.toml  slack_message_sender.py  sns_message_sender.py
crash_alert/message_senders/: message_sender_base.py  slack_message_sender.py  sns_message_sender.py
lap_timer/: .env.example  LapTimer.py  pyproject.toml
lap_timer/bumpstrips/: ArduinoToMQTT.py  LapTrigger.ino  pyproject.toml
lap_timer/bumpstrips/LapTrigger/: LapTrigger.ino
module_back/: README.md
module_front/: README.md
module_middle/: README.md  module_middle.ino
module_middle/tests/: sample_test.py
raspberry_pi/Test/: mock_wireless_module.py  mqtt_test.py  serial_test.py
service/: ant-plus.service  logger.service
services/: README.md  ant-plus.service  chase_rx_mqtt.service  chase_tx_mqtt.service  crash_alert.service  install.sh  log-to-excel.service  logger.service  radio-bridge.service  raw_logger.service
utils/: Pipfile  README.md  das_data_sorter.py  das_data_sorter2.py  pyproject.toml  turps.py
wireless_modules/: README.md  battery_reader.py  boot.py  complementary.ipynb  config.example.py  config.py  mqtt_client.py  status_led.py  test.py  wireless_module.py
wireless_modules/back_module/: main.py  upload.sh
wireless_modules/common_sensors/: co2_sensor.py  dht_sensor.py  mq135_sensor.py
wireless_modules/libraries/: abc.py
wireless_modules/middle_module/: MQTT_Client_class.py  README.md  boot.py  config.example.py  main.py  mpu.py  mpu6050.py  mqtt_client.py  test.py  test_sensors.py  upload.sh
wireless_modules/mqtt_test/: boot.py  config.example.py  fake.py  main.py  upload.sh
wireless_modules/rpi_sensors/: wind_sensor.py
wireless_modules/sensors/: co2_sensor.py  dht_sensor.py  gps_sensor.py  mpu.py  mpu_sensor.py  mpu_sensor_6500.py  reed_sensor.py  sensor_base.py  strain_gauge.py
wireless_modules/utils/: battery_lin_reg.py  battery_plotter.py  co2_plotter.py
wireless_modules/wind_module/: rpi_wireless_module.py
wireless_modules_py/: .gitignore  README  README.md  config.example.py  config.py  wireless_module.py
wireless_modules_py/pressure_module/: main.py  pyproject.toml
wireless_modules_py/sensors/: new_temp_sensor.py  pressure_sensor.py  sensor_base.py  temp_sensor.py  wind_sensor.py
wireless_modules_py/temp_module/: README.md  config.example.py  draft.py  main.py  pyproject.toml
wireless_modules_py/wind_module/: README.md  config.example.py  config.py  main.py  pyproject.toml  wireless_module.py
(+35 files in other folders)
