[tool.poetry]
name = "data-acquisition-system"
version = "0.1.0"
description = "Monash Human Power DAS"
authors = ["Blake <bhay0010@student.monash.edu>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
