[tool.poetry]
name = "das"
version = "0.1.0"
description = ""
authors = ["Blake <bhay0010@student.monash.edu>"]

[tool.poetry.dependencies]
python = "^3.7"
paho-mqtt = "^1.6.1"
pandas = "1.1.1"
argparse = "^1.4.0"
python-dotenv = "^0.21.0"
rich = "^12.5.1"
XlsxWriter = "^3.0.3"
mqtt-logger = "^0.3.2"
mhp = {git = "git@github.com:monash-human-power/common.git"}
urllib3 = "^1.26.12"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
