[tool.poetry]
name = "crash-alert"
version = "0.1.0"
description = ""
authors = ["Jessica Mark <jmar0069@student.monash.edu>"]
readme = "README.md"
packages = [{include = "crash_alert"}]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.28.1"
paho-mqtt = "^1.6.1"
boto3 = "^1.24.85"
python-dotenv = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
