[tool.poetry]
name = "lap-timer"
version = "0.1.0"
description = ""
authors = ["Ammanuel Mengesha Woldemicael <awol0007@student.monash.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
paho-mqtt = "^1.6.1"
python-dotenv = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
