[tool.poetry]
name = "das_data_sorter"
version = "0.1.0"
description = "Filters data from MHP's Data Acquisition System (DAS) and sorts them into a new CSV file"
authors = ["Nicholas Chua <nmchua8@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0.3"
argparse = "^1.4.0"
numpy = "^1.21.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
