[tool.poetry]
name = "data_pipeline"
version = "0.1.0"
description = "transport data. beep! beep!"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
mhp = {git = "git@github.com:monash-human-power/common.git", rev = "202012.9"}
numpy = "1.18.5"
python-dotenv = "^0.20.0"
rich = "^12.5.1"
pandas = "1.1.1"
XlsxWriter = "^3.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
