[tool.poetry]
name = "pressure-module"
version = "0.1.0"
description = ""
authors = ["da-food <dpollard02@gmail.com>"]
readme = "README.md"
packages = [{include = "pressure_module"}]

[tool.poetry.dependencies]
python = "^3.8"
paho-mqtt = "^1.6.1"
numpy = "^1.24.3"
mhp = {git = "git@github.com:monash-human-power/common.git"}
smbus2 = "^0.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
