[tool.poetry]
name = "temp_module"
version = "0.1.0"
description = ""
authors = ["Ngoc Thao Vy Nguyen <cnngu0146@student.monash.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
paho-mqtt = "^1.6.1"
mhp = {git = "git@github.com:monash-human-power/common.git"}
Adafruit-DHT = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"