[tool.poetry]
name = "wind_module"
version = "0.1.0"
description = ""
authors = ["Cheuk Lam Winnie Chui <cchu0061@student.monash.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pyserial = "^3.5"
paho-mqtt = "^1.6.1"
mhp = {git = "git@github.com:monash-human-power/common.git"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
